fix(docs): prevent arcade font fallback flicker

--- a/packages/docs/src/global.css
+++ b/packages/docs/src/global.css
@@ -49,7 +49,7 @@
   src: url('./media/fonts/karmatic-arcade/karmatic-arcade.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -80,7 +80,7 @@
   --breakpoint-2xl: 90rem;
 
   /* Font families */
-  --font-display: 'Karmatic Arcade', cursive;
+  --font-display: 'Karmatic Arcade', sans-serif;
   --font-heading: 'Tomorrow', sans-serif;
   --font-body: 'Ubuntu Sans', sans-serif;
 
